# shit

./: .gitignore  calculate24.c  float2frac.c  long_long_long.c
OR/: CMakeLists.txt  linear.cpp  linear.hpp  share.hpp  transport.cpp  transport.hpp
lll/: CMakeLists.txt  integer.cpp  integer.hpp
lll/integer/: bit.cpp  division.cpp  internal.cpp  internal.hpp  io.cpp  math.cpp  math.hpp  multiply.cpp  power.cpp  simply.cpp  utils.cpp
mf/: CMakeLists.txt  math_func.c  math_func.cpp  math_func.h  math_func.hpp  math_func_op.c
